# Computer-Graphic

Project1/: CMakeLists.txt
Project1/src/: main.cpp
Project2/: Project2.sln
Project2/Project2/: Project2.vcxproj  main.cpp
Project2/Project2/x64/Debug/: vc143.idb
Project2/Project2/x64/Debug/Project2.tlog/: CL.command.1.tlog  CL.write.1.tlog  Project2.lastbuildstate
Project2/Project2/x64/Release/: Project2.exe.recipe  Project2.iobj  Project2.ipdb
Project2/Project2/x64/Release/Project2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
shaders and rendering/: CMakeLists.txt
shaders and rendering/src/: main.cpp
